--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -40,7 +40,7 @@
 
   p, li {
     font-family: $sans-serif;
-    font-size: $type-size-6;
+    font-size: 15px;  // 侧栏字体大小
     line-height: 1.5;
   }
 
